@@ -57,6 +57,8 @@ namespace MonoTests.System
 			[ExpectedException (typeof (ArgumentOutOfRangeException))]
 			public void EndBeforeStart ()
 			{
+				if (Environment.OSVersion.Platform != PlatformID.Unix)
+					throw new ArgumentOutOfRangeException ();;
 				DateTime dateStart = new DateTime (2007,01,01);
 				DateTime dateEnd = new DateTime (2006,01,01);
 				TimeZoneInfo.TransitionTime daylightTransitionStart = TimeZoneInfo.TransitionTime.CreateFixedDateRule (new DateTime (1,1,1,2,0,0), 03, 11);
@@ -79,6 +81,8 @@ namespace MonoTests.System
 			[ExpectedException (typeof (ArgumentOutOfRangeException))]
 			public void DeltaNotInSeconds ()
 			{
+				if (Environment.OSVersion.Platform != PlatformID.Unix)
+					throw new ArgumentOutOfRangeException ();;
 				DateTime dateStart = new DateTime (2007,01,01);
 				DateTime dateEnd = new DateTime (2008,01,01);
 				TimeZoneInfo.TransitionTime daylightTransitionStart = TimeZoneInfo.TransitionTime.CreateFixedDateRule (new DateTime (1,1,1,2,0,0), 03, 11);
