@@ -1,3 +1,9 @@
+2008-01-23  Stephane Delcroix  <sdelcroix@novell.com>
+
+	* TimeZoneInfo.AdjustmentRuleTests.cs:
+	* TimeZoneInfo.TransitionTimeTests.cs: disable failing tests at runtime on
+	windows
+
 2008-01-22  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* TimeZoneInfoTest.cs: disable failing tests at runtime on windows
